# wardyn

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  justfile  leash-audit.jsonl  policy.yaml  rename-to-wardyn.sh  rust-toolchain.toml  typescript
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml
docs/: RECORDING.md
leash/: Cargo.toml  build.rs
leash-common/: Cargo.toml
leash-common/src/: lib.rs
leash-ebpf/: Cargo.toml
leash-ebpf/src/: main.rs
leash/src/: audit.rs  main.rs  policy.rs  tui.rs
policies/: permissive.yaml  strict.yaml
scripts/: demo.sh  enable-bpf-lsm.sh  kernel-offsets.sh  setup-vm.sh
wardyn/: Cargo.toml  build.rs
wardyn-common/: Cargo.toml
wardyn-common/src/: lib.rs
wardyn-ebpf/: Cargo.toml
wardyn-ebpf/src/: main.rs
wardyn/src/: audit.rs  main.rs  policy.rs  tui.rs
