[workspace]
resolver = "2"
members = ["wardyn", "wardyn-common", "wardyn-ebpf"]
# wardyn-ebpf is built for the BPF target by wardyn/build.rs (aya-build), not by a
# normal host `cargo build`, so keep it out of the default set.
default-members = ["wardyn", "wardyn-common"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["kadircanyildirm-crypto"]
repository = "https://github.com/kadircanyildirm-crypto/wardyn"
homepage = "https://github.com/kadircanyildirm-crypto/wardyn"

[workspace.dependencies]
aya = { version = "0.13" }
aya-log = { version = "0.2" }
aya-ebpf = { version = "0.2" }
aya-log-ebpf = { version = "0.1" }
wardyn-common = { path = "wardyn-common" }
anyhow = "1"
