[package]
name = "leash"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya = { workspace = true }
leash-common = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "signal", "net", "process", "time"] }
ratatui = "0.29"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
# policy engine
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
globset = "0.4"
ipnet = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[build-dependencies]
aya-build = "0.2"
anyhow = { workspace = true }

[[bin]]
name = "leash"
path = "src/main.rs"
