[package]
name = "wardyn-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared, dependency-free types crossing Wardyn's kernel/userspace boundary (no_std)."

# Shared, dependency-free types crossing the kernel<->user boundary.
# no_std so the eBPF crate can use it; also compiles fine under std.
[dependencies]

[lib]
path = "src/lib.rs"
