[package]
name = "wardyn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A kernel-level wardyn for AI coding agents — eBPF watches every file, exec, and network connection an agent makes, and blocks policy violations in real time."
keywords = ["ebpf", "security", "sandbox", "bpf", "agent"]
categories = ["command-line-utilities", "development-tools", "os::linux-apis"]

[dependencies]
aya = { workspace = true }
wardyn-common = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "signal", "net", "process", "time"] }
ratatui = "0.30"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
# policy engine
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
globset = "0.4"
ipnet = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[build-dependencies]
aya-build = "0.2"
anyhow = { workspace = true }

[[bin]]
name = "wardyn"
path = "src/main.rs"
